Update to gitattributes and begining to add support for email attachments.

--- a/Phishious/Phishious.csproj
+++ b/Phishious/Phishious.csproj
@@ -370,4 +370,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Config\Attachments\" />
+  </ItemGroup>
+
 </Project>
