--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 ###############################################################################
 * text=auto
 *.css linguist-detectable=false
+*.cs linguist-language=C#
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
