--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,8 @@
 * text=auto
 *.css linguist-detectable=false
 *.js linguist-detectable=false
+*.html linguist-detectable=false
+*.php linguist-detectable=false
 *.cs linguist-language=C#
 ###############################################################################
 # Set default behavior for command prompt diff.
