--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 *.css linguist-detectable=false
 *.js linguist-detectable=false
 *.html linguist-detectable=false
+*.cshtml linguist-detectable=false
 *.php linguist-detectable=false
 *.cs linguist-language=C#
 ###############################################################################
