--- a/Phishious/Phishious.csproj
+++ b/Phishious/Phishious.csproj
@@ -362,8 +362,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AE.Net.Mail" Version="1.7.10" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.3.16" />
-    <PackageReference Include="EAGetMail" Version="5.2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
